# projeto_sintia

./: .gitignore  README.md  config.py  config.yaml  manage.py  pyproject.toml  schema.yml
base/: api.py  permissions.py  settings.py  urls.py
bot_messages/: Message_test.py  admin.py  apps.py  models.py  serializers.py  views.py  viewsets.py
bot_messages/migrations/: 0001_initial.py  0002_rename_message_session_message_session.py  0003_alter_message_response_cost.py  0004_session_user.py
chatbots/: admin.py  models.py  serializers.py  views.py  viewsets.py
chatbots/migrations/: 0001_initial.py  0002_rename_bot_owner_chatbot_user.py  0003_modeltype_default_api_key.py  0004_alter_chatbot_model_alter_chatbot_search_and_more.py  0005_chatbot_is_active_chatbot_is_private_and_more.py  0006_modeltype_credits_cost.py  0007_alter_chatbot_is_private_alter_chatbot_is_published_and_more.py  0008_chatbot_color_chatbot_font_chatbot_side.py  0009_alter_chatbot_color.py
customizations/: admin.py  models.py  serializers.py  viewsets.py
customizations/migrations/: 0001_initial.py  0002_alter_colors_options_alter_fontfamilies_options_and_more.py
messages/: models.py
users/: admin.py  base_model.py  models.py  serializers.py  views.py  viewsets.py
users/migrations/: 0001_initial.py
users/tests/: login_test.py  user_list_view_test.py  user_model_test.py  user_retrieve_update_delete_test.py  user_test.py  user_test_base.py
utils/: email.py
